# kodiak

./: .gitignore  Kodiak.spec  Makefile  README.md  builddmg.sh  components.py  converter.py  gui.py  installer.iss  kodiak.icns  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
kodiak/: converter.py  gui.py  utils.py
