[tool.poetry]
name = "kodiak"
version = "0.1.0"
description = ""
authors = ["nerdthejohn <newtonjohn043@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
chardet = "5.0.0"
et-xmlfile = "1.1.0"
lml = "0.1.0"
openpyxl = "3.0.10"
packaging = "21.3"
ply = "3.11"
pyexcel = "0.7.0"
pyexcel-io = "0.6.6"
pyexcel-xls = "0.7.0"
pyexcel-xlsx = "0.6.0"
pyparsing = "3.0.9"
PyQt6 = "6.4.0"
PyQt6-Qt6 = "6.4.0"
PyQt6-sip = "13.4.0"
texttable = "1.6.4"
toml = "0.10.2"
xlrd = "2.0.1"
xlwt = "1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
